--- a/SampleProject/res/layout/fragment_saro_retrieval.xml
+++ b/SampleProject/res/layout/fragment_saro_retrieval.xml
@@ -9,6 +9,7 @@
     tools:context=".SaroRetrieval$PlaceholderFragment">
 
     <ListView
+        android:id="@+id/saro_retrieval_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
