--- a/SampleProject/res/layout/list_item_saro.xml
+++ b/SampleProject/res/layout/list_item_saro.xml
@@ -10,16 +10,6 @@
         android:text="Description"
         android:textSize="32sp"
     />
-    <TextView
-        android:id="@+id/project_description"
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_below="@id/description"
-        android:paddingRight="5dp"
-        android:textSize="15sp"
-        android:text="Project Description that is quite long yes?"
-        android:ellipsize="end"
-        />
     <LinearLayout
         android:id="@+id/value_layout"
         android:layout_width="wrap_content"
@@ -27,18 +17,29 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/description">
         <TextView
-            android:id="@+id/project_funds"
             android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:textSize="28sp"
             android:text="P"/>
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/project_funds"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:textSize="28sp"
             android:text="000000"/>
 
-
+	
     </LinearLayout>
+    <TextView
+        android:id="@+id/project_description"
+        android:layout_width="match_parent"
+        android:layout_toLeftOf="@id/value_layout"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/description"
+        android:paddingRight="5dp"
+        android:textSize="15sp"
+        android:text="Project Description that is quite long yes?"
+        android:ellipsize="end"
+        />
 
 </RelativeLayout>
